--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 mono_crash.*
 
 # Build results
+latex/
 [Dd]ebug/
 [Dd]ebugPublic/
 [Rr]elease/
@@ -348,3 +349,4 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+*.pdf
