--- a/.gitignore
+++ b/.gitignore
@@ -350,3 +350,9 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 *.pdf
+qwrq.jpg
+qwrqr — kopia (2).jpg
+qwrqr — kopia.jpg
+qwrqr.jpg
+Raytracer/arni.bmp
+xd.jpg
